--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,17 @@
+# Site settings
+title: Guichê Virtual
+email: contato@guichevirtual.com.br
+description: Conteúdo do Guichê Virtual
+logo: static/gvlogo.png
+mdl_colors: light_blue-orange
+copyright: Guichê Virtual Serviços de Internet
+search: false 
+menu_style: dropdown
+
+# jekyll setup
 plugins:
   - jekyll-remote-theme
-
 remote_theme: chromatical/jekyll-materialdocs
-
-#site options
-logo: static/gvlogo.png # an absolute or relative image path to use as the site logo
-mdl_colors: light_blue-orange # a supported Material Design Lite color scheme
-copyright: Guichê Virtual
-search: false # enabled by default, set to false to disable site search
-menu_style: dropdown # will only show child menu items for the main item selected
+exclude:
+  - Gemfile
+  - Gemfile.lock
