--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Guichê Virtual
-email: contato@guichevirtual.com.br
+# email: fill with email
 description: Conteúdo do Guichê Virtual
 logo: static/gvlogo.png
 mdl_colors: light_blue-orange
